--- a/BibliotecaMusical_Dominio/pom.xml
+++ b/BibliotecaMusical_Dominio/pom.xml
@@ -11,4 +11,11 @@
         <maven.compiler.target>21</maven.compiler.target>
         <exec.mainClass>com.mycompany.bibliotecamusical_dominio.BibliotecaMusical_Dominio</exec.mainClass>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.12.10</version>
+        </dependency>
+    </dependencies>    
 </project>
