--- a/BibliotecaMusical_Dominio/pom.xml
+++ b/BibliotecaMusical_Dominio/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.bdm</groupId>
-    <artifactId>BibliotecaMusical</artifactId>
+    <artifactId>BibliotecaMusical_Dominio</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -32,4 +32,5 @@
             </plugin>
         </plugins>
     </build>
+    <name>BibliotecaMusical_Dominio</name>
 </project>
