--- a/BibliotecaMusical_Negocio/pom.xml
+++ b/BibliotecaMusical_Negocio/pom.xml
@@ -11,4 +11,16 @@
         <maven.compiler.target>21</maven.compiler.target>
         <exec.mainClass>com.mycompany.bibliotecamusical_negocio.BibliotecaMusical_Negocio</exec.mainClass>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.bdm</groupId>
+            <artifactId>BibliotecaMusical_Dominio</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
