--- a/BibliotecaMusical_Presentacion/pom.xml
+++ b/BibliotecaMusical_Presentacion/pom.xml
@@ -17,6 +17,13 @@
             <version>${project.version}</version>
         </dependency>
     </dependencies>
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
+    </build>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>21</maven.compiler.source>
