--- a/BibliotecaMusical_Presentacion/pom.xml
+++ b/BibliotecaMusical_Presentacion/pom.xml
@@ -16,6 +16,18 @@
             <artifactId>BibliotecaMusical_Negocio</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.12.14</version> <!-- Verifica la última versión disponible -->
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>bson</artifactId>
+            <version>5.3.0-beta0</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <build>
         <resources>
